--- a/Project.toml
+++ b/Project.toml
@@ -21,7 +21,7 @@ StatsBase = "2913bbd2-ae8a-5f71-8c99-4fb6c76f3a91"
 
 [compat]
 CairoMakie = "0.11"
-Chain = "0.5"
+Chain = "0.5, 0.6"
 Combinatorics = "1"
 Documenter = "1"
 Graphs = "1"
